feat: CORS 허용 도메인 환경변수로 설정
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>